Fixed an issue with the correct ans not initializing and realigned the form with the button

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -128,18 +128,27 @@ p {
 .viewing .label{
     font-size: 30px;
     font-weight: bold;
-    padding-left: 120px;   
+    padding-left: 110px;
+    margin-left: auto;
+    margin-right: auto;  
 }
 
 .viewing .submitForm {
     position: absolute;
     left: 45%;
     padding: 10px;
+    margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
     font-size: 20px;
     border-radius: 10px;
     background-color: #330a76;
+    color: white;
+}
+
+.veiwing .submitForm:hover {
+    background-color: #930693;
+    cursor: pointer;
 }
 
 .startB {
